deployment/deployment.yml
#| filename: "deployment/deployment.yaml"
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-app-deployment
  labels:
    app: book-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-app
  template:
    metadata:
      labels:
        app: book-app
    spec:
      containers:
      - name: book-app
        image: lujulia/mise-en-production:v1.0.1
        ports:
        - containerPort: 8000
