deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: book-app-service
spec:
  selector:
    app: book-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
